# serializer version: 1
# name: test_read_oxdna
  array([32, 33, 30, 31, 31, 31, 32, 31, 31, 30, 30, 31, 30, 33, 33, 32, 33,
         31, 32, 33, 31, 30, 33, 31, 30, 32, 33, 32, 33, 32, 33, 32, 31, 32,
         32, 32, 30, 33, 30, 31, 31, 32, 32, 33, 30, 30, 31, 30, 31, 33, 33,
         31, 31, 31, 33, 31, 30, 31, 32, 30, 31, 32, 33, 31, 32, 33, 31, 31,
         33, 32, 31, 32, 32, 32, 33, 33, 31, 30, 30, 31, 33, 30, 32, 32, 30,
         33, 33, 32, 31, 30, 33, 33, 32, 33, 31, 31, 33, 33, 30, 30])
# ---
# name: test_read_oxdna.1
  array([4, 1, 4, 3, 1, 1, 2, 4, 3, 3, 1, 3, 4, 2, 3, 4, 4, 1, 2, 4, 3, 1,
         3, 3, 1, 3, 3, 2, 3, 4, 2, 3, 1, 1, 2, 3, 4, 2, 4, 4, 1, 4, 2, 3,
         3, 3, 1, 1, 4, 4, 2, 1, 3, 3, 2, 3, 4, 2, 2, 2, 1, 2, 2, 1, 3, 3,
         3, 3, 3, 3, 1, 4, 1, 2, 3, 3, 1, 4, 2, 1, 3, 4, 1, 4, 3, 4, 3, 4,
         4, 4, 3, 3, 2, 4, 1, 3, 2, 2, 2, 3])
# ---
# name: test_read_oxdna.10
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_read_oxdna.11
  array(AttributeError("The selected attribute 'sharp_face' does not exist on the mesh."),
        dtype=object)
# ---
# name: test_read_oxdna.12
  array([32, 32, 30, 30, 31, 31, 33, 31, 31, 30, 33, 32, 32, 33, 31, 30, 33,
         30, 31, 31, 31, 33, 31, 30, 32, 31, 32, 33, 33, 32, 33, 33, 32, 30,
         33, 31, 31, 33, 30, 31, 30, 31, 33, 32, 32, 32, 33, 30, 31, 31, 31,
         32, 32, 33, 33, 33, 32, 30, 32, 33, 31, 32, 30, 31, 31, 32, 33, 31,
         32, 33, 31, 31, 32, 31, 30, 33, 30, 32, 31, 32, 33, 32, 31, 33, 33,
         30, 33, 32, 33, 33, 32, 30, 31, 32, 32, 33, 32, 31, 31, 33])
# ---
# name: test_read_oxdna.13
  array([3, 4, 3, 2, 1, 1, 3, 1, 4, 1, 3, 4, 2, 2, 3, 2, 3, 3, 3, 1, 3, 1,
         2, 3, 3, 3, 2, 3, 3, 2, 2, 1, 4, 2, 4, 4, 1, 1, 3, 3, 4, 1, 4, 3,
         4, 4, 2, 4, 3, 4, 2, 2, 4, 2, 4, 2, 4, 1, 2, 1, 1, 4, 4, 1, 1, 2,
         3, 4, 4, 2, 1, 3, 2, 3, 3, 3, 3, 3, 3, 2, 3, 4, 3, 3, 4, 2, 3, 2,
         3, 3, 4, 1, 1, 4, 3, 1, 2, 3, 4, 3])
# ---
# name: test_read_oxdna.14
  array([[0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.27467737, 0.54572469, 0.79910296, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.27467737, 0.54572469, 0.79910296, 1.        ],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.80000001, 0.236614  , 0.167417  , 1.        ],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.80000001, 0.26980299, 0.52689803, 1.        ],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.29458201, 0.80000001, 0.18778899, 1.        ],
         [0.80000001, 0.26980299, 0.52689803, 1.        ]])
# ---
# name: test_read_oxdna.15
  array([[-0.25329459,  0.46172661,  0.1441472 ],
         [-0.03657147,  0.77445751, -0.06176547],
         [-0.14886855,  0.68406159,  0.07740207],
         [ 0.12470743,  0.32652706,  0.08649537],
         [-0.30794755,  0.33387074,  0.59808362],
         [-0.2680735 ,  0.37241602,  0.56688255],
         [-0.14569525,  0.83697748, -0.31498212],
         [ 0.1160226 ,  0.45114043,  0.10375348],
         [-0.23946258,  0.4450506 ,  0.34207553],
         [-0.03112237,  0.295331  , -0.02964684],
         [-0.08493441,  0.76510125, -0.16162473],
         [-0.13336658,  0.76715797, -0.01658059],
         [ 0.01723329,  0.36983851,  0.15123206],
         [-0.50349176,  0.23212123,  0.08046485],
         [-0.11246053,  0.67478395, -0.11123414],
         [ 0.12408313,  0.33794475,  0.04219158],
         [-0.06916149,  0.69254798,  0.012418  ],
         [-0.11717005,  0.67357814,  0.10620782],
         [-0.5495407 ,  0.20995541,  0.1129474 ],
         [-0.2146571 ,  0.37222698,  0.62062418],
         [-0.03740905,  0.63501573, -0.07650753],
         [-0.06530998,  0.28445041,  0.06948845],
         [-0.410658  ,  0.23022348,  0.05855453],
         [-0.20745094,  0.27909455,  0.1256302 ],
         [-0.16237973,  0.51249605,  0.13025331],
         [-0.12430196,  0.65896726, -0.11433475],
         [ 0.02175783,  0.33820981,  0.09903442],
         [-0.08755036,  0.94366497, -0.16347496],
         [-0.12270017,  0.78924036, -0.17044394],
         [-0.12560894,  0.38676405, -0.02992094],
         [-0.05796361,  0.37836114,  0.09763677],
         [-0.07913218,  0.33320835,  0.00786727],
         [-0.11763188,  0.80100894, -0.06584504],
         [ 0.13560905,  0.32382631,  0.10434672],
         [-0.18865845,  0.38642114,  0.42224967],
         [-0.14698507,  0.47124046,  0.19479933],
         [ 0.09412412,  0.49181753,  0.13062303],
         [-0.06927519,  0.28001919,  0.01124275],
         [-0.34183151,  0.37915415, -0.00755842],
         [-0.44085878,  0.23055124, -0.01154952],
         [-0.16892552,  0.56890684,  0.01800026],
         [-0.16152263,  0.34155899,  0.04297173],
         [-0.13896012,  0.58534437, -0.03914502],
         [-0.06801634,  0.66969025,  0.06300494],
         [-0.10145421,  0.56248581,  0.12760782],
         [-0.20853481,  0.3802979 ,  0.62205195],
         [-0.02345434,  0.35423654,  0.10188083],
         [-0.19220498,  0.67916244, -0.05631527],
         [-0.06640637,  0.63045621, -0.06667442],
         [-0.10928064,  0.50482571,  0.21433757],
         [ 0.07537696,  0.32346198,  0.13399132],
         [ 0.18789938,  0.4654887 ,  0.00261211],
         [-0.09277422,  0.78519255, -0.11736734],
         [-0.5207687 ,  0.32887858,  0.03700037],
         [-0.12634313,  0.36433741,  0.45912114],
         [-0.1932151 ,  0.2682215 , -0.05891231],
         [-0.17908594,  0.34015021,  0.53028405],
         [-0.13317528,  0.3879427 ,  0.29239872],
         [ 0.17934714,  0.41615418,  0.02233779],
         [-0.07454864,  0.29800808,  0.04142326],
         [-0.14796676,  0.27538285,  0.1013387 ],
         [-0.14001001,  0.44435194,  0.57564354],
         [-0.13454394,  0.57000458,  0.0662385 ],
         [ 0.14637896,  0.45224217,  0.04657651],
         [ 0.19481829,  0.41757247,  0.11903623],
         [ 0.03868479,  0.32836828,  0.09747905],
         [-0.08689003,  0.95167989, -0.24881506],
         [-0.09746782,  0.58000773,  0.24323444],
         [-0.15911718,  0.75237578, -0.0670416 ],
         [-0.31122357,  0.23158525,  0.09578114],
         [ 0.18976043,  0.46570516,  0.12085279],
         [-0.54576057,  0.18455115,  0.03741006],
         [-0.14769092,  0.30000496,  0.02907317],
         [-0.12058814,  0.70920366, -0.17129582],
         [-0.20533688,  0.33885387,  0.03518593],
         [-0.28625244,  0.33739069,  0.03587241],
         [-0.09384264,  0.66462857,  0.13020235],
         [-0.21261205,  0.49728969,  0.11672106],
         [-0.18575138,  0.53995913,  0.09731267],
         [ 0.16942562,  0.40955082,  0.07183731],
         [-0.30427173,  0.40332252,  0.07409611],
         [-0.18636566,  0.40041316,  0.4590531 ],
         [-0.51982349,  0.17554173,  0.10122992],
         [-0.11136623,  0.81357408, -0.24414998],
         [-0.16364601,  0.57374179, -0.04390569],
         [-0.36356527,  0.22296888,  0.09528077],
         [-0.21215096,  0.64018059,  0.18569857],
         [ 0.17977813,  0.32222933,  0.03980509],
         [-0.03633988,  0.64039797, -0.00754582],
         [-0.13975093,  0.64792609,  0.12243095],
         [-0.12068261,  0.71516687, -0.07575496],
         [-0.05759452,  0.3044965 , -0.03876926],
         [-0.10998154,  0.25707519,  0.05524306],
         [-0.06077263,  0.55013275,  0.11317568],
         [-0.19252482,  0.474639  ,  0.16693163],
         [-0.09423551,  0.33420476,  0.06767242],
         [ 0.22300993,  0.40133724, -0.01719156],
         [-0.24422802,  0.57762092,  0.18048647],
         [-0.10253169,  0.50548452,  0.1570501 ],
         [-0.14626713,  0.63182706,  0.13116015]])
# ---
# name: test_read_oxdna.16
  array([[ 6.84554726e-02,  5.61889298e-02,  4.64397818e-02],
         [-3.59954014e-02, -5.87886162e-02, -7.24446848e-02],
         [-1.55369043e-02, -6.42391890e-02, -7.50461966e-02],
         [-4.01557535e-02,  8.98928866e-02, -1.75152514e-02],
         [ 6.23006113e-02,  7.82013834e-02, -1.78236980e-03],
         [ 9.66981947e-02,  2.54525281e-02,  1.27692590e-03],
         [ 4.06344533e-02,  3.03135701e-02, -8.61970335e-02],
         [ 3.57444063e-02, -8.40110481e-02, -4.07980457e-02],
         [ 9.78853926e-02, -1.91856772e-02, -7.09650526e-03],
         [-1.82572920e-02,  7.15675801e-02,  6.74147755e-02],
         [ 9.18333083e-02, -4.79413569e-03,  3.92894149e-02],
         [ 7.09124953e-02, -6.86510801e-02, -1.60762742e-02],
         [-5.75572345e-03,  2.28868164e-02, -9.71754417e-02],
         [ 2.79761050e-02, -9.14829150e-02, -2.91241352e-02],
         [-2.55446276e-03,  8.67350101e-02,  4.97042611e-02],
         [-4.01557535e-02,  8.98928866e-02, -1.75152514e-02],
         [-9.15601701e-02,  1.12407226e-02, -3.86054665e-02],
         [-1.55369043e-02, -6.42391890e-02, -7.50461966e-02],
         [-1.58398002e-02,  4.52440865e-02, -8.77614543e-02],
         [ 6.23006113e-02,  7.82013834e-02, -1.78236980e-03],
         [-7.81961530e-02,  6.23213723e-02,  1.18741265e-03],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [-3.88864419e-06, -3.21701355e-02, -9.46841240e-02],
         [ 6.50486071e-03, -1.46040376e-02, -9.87137631e-02],
         [ 9.26795453e-02,  2.80560013e-02,  2.49672346e-02],
         [-2.55446276e-03,  8.67350101e-02,  4.97042611e-02],
         [-5.75572345e-03,  2.28868164e-02, -9.71754417e-02],
         [ 4.70633991e-02, -8.82324502e-02,  2.62537564e-04],
         [ 9.18333083e-02, -4.79413569e-03,  3.92894149e-02],
         [ 2.72955541e-02, -8.36349726e-02,  4.75409813e-02],
         [ 1.23619046e-02, -7.52501637e-02, -6.46884665e-02],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [ 2.46284250e-02, -7.97814578e-02, -5.50305545e-02],
         [-4.01557535e-02,  8.98928866e-02, -1.75152514e-02],
         [ 5.69041856e-02,  7.93420821e-02,  2.16043182e-02],
         [-8.20550174e-02, -4.09665667e-02, -3.98586914e-02],
         [ 3.57444063e-02, -8.40110481e-02, -4.07980457e-02],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [ 2.04689093e-02, -7.61707723e-02,  6.14738651e-02],
         [-1.88861080e-02,  6.95836097e-02,  6.92923889e-02],
         [-1.36492327e-02,  7.54409581e-02,  6.42056167e-02],
         [-1.78838652e-02,  1.98652484e-02, -9.63615105e-02],
         [ 3.83696631e-02,  5.99156506e-02,  7.02700838e-02],
         [-6.44068196e-02, -3.67151126e-02, -6.71100765e-02],
         [-9.57531184e-02,  1.02303149e-02,  2.69570500e-02],
         [-6.71379194e-02, -7.40019232e-02, -4.02680831e-03],
         [ 9.19466279e-03, -2.24431995e-02, -9.70142335e-02],
         [ 8.64954442e-02, -2.06817910e-02,  4.57253084e-02],
         [-7.81961530e-02,  6.23213723e-02,  1.18741265e-03],
         [-8.20550174e-02, -4.09665667e-02, -3.98586914e-02],
         [-2.52786819e-02,  6.98315054e-02, -6.69667870e-02],
         [-8.51805788e-03,  5.92932245e-03,  9.94599685e-02],
         [-3.59954014e-02, -5.87886162e-02, -7.24446848e-02],
         [ 2.79761050e-02, -9.14829150e-02, -2.91241352e-02],
         [-7.70833045e-02,  6.22820742e-02,  1.33832190e-02],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [-9.44243595e-02,  3.25364098e-02, -5.04198344e-03],
         [-8.00813437e-02,  5.98714128e-02,  1.54705159e-03],
         [-3.86054926e-02,  5.35684712e-02,  7.51001611e-02],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [-1.78838652e-02,  1.98652484e-02, -9.63615105e-02],
         [-9.48773697e-02, -3.14251445e-02, -3.27835372e-03],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [ 4.15099040e-02, -3.75111625e-02, -8.28844979e-02],
         [ 9.95471794e-03,  8.35173763e-03, -9.91521701e-02],
         [-5.75572345e-03,  2.28868164e-02, -9.71754417e-02],
         [-1.77254844e-02, -6.71797395e-02,  7.19214156e-02],
         [-8.20550174e-02, -4.09665667e-02, -3.98586914e-02],
         [ 7.09124953e-02, -6.86510801e-02, -1.60762742e-02],
         [-1.25411525e-02,  8.11201558e-02, -5.71160130e-02],
         [ 9.95471794e-03,  8.35173763e-03, -9.91521701e-02],
         [-1.58398002e-02,  4.52440865e-02, -8.77614543e-02],
         [-5.00132795e-03, -3.26736234e-02,  9.43791419e-02],
         [ 4.11955491e-02,  6.68168217e-02,  6.19551353e-02],
         [ 6.50486071e-03, -1.46040376e-02, -9.87137631e-02],
         [ 2.23880652e-02, -9.74605307e-02,  4.67783160e-04],
         [-1.55369043e-02, -6.42391890e-02, -7.50461966e-02],
         [ 9.26795453e-02,  2.80560013e-02,  2.49672346e-02],
         [ 9.62370262e-02, -6.62590098e-03, -2.63539404e-02],
         [-3.86054926e-02,  5.35684712e-02,  7.51001611e-02],
         [ 2.23880652e-02, -9.74605307e-02,  4.67783160e-04],
         [-7.68944900e-03,  9.87471193e-02,  1.37796309e-02],
         [-2.54431330e-02,  9.19696838e-02, -2.99035907e-02],
         [ 4.06344533e-02,  3.03135701e-02, -8.61970335e-02],
         [ 3.83696631e-02,  5.99156506e-02,  7.02700838e-02],
         [-1.94408335e-02,  2.64373478e-02, -9.44622755e-02],
         [ 7.87089840e-02, -4.10344228e-02, -4.60550934e-02],
         [-4.54441719e-02,  7.94697851e-02,  4.02415022e-02],
         [-9.15601701e-02,  1.12407226e-02, -3.86054665e-02],
         [ 1.75175313e-02, -5.23140542e-02, -8.34048837e-02],
         [ 7.09124953e-02, -6.86510801e-02, -1.60762742e-02],
         [-1.82572920e-02,  7.15675801e-02,  6.74147755e-02],
         [-2.82710735e-02,  7.95620233e-02, -5.35782874e-02],
         [-9.57531184e-02,  1.02303149e-02,  2.69570500e-02],
         [ 6.84554726e-02,  5.61889298e-02,  4.64397818e-02],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [-8.51805788e-03,  5.92932245e-03,  9.94599685e-02],
         [ 9.62370262e-02, -6.62590098e-03, -2.63539404e-02],
         [-9.76733565e-02, -1.92365609e-02, -9.47999395e-03],
         [ 1.75175313e-02, -5.23140542e-02, -8.34048837e-02]])
# ---
# name: test_read_oxdna.17
  array([[-0.00300858,  0.06583025, -0.07521521],
         [-0.06911296, -0.03535839,  0.06303319],
         [ 0.0532635 ,  0.05853241, -0.06113066],
         [-0.09158274, -0.03934284,  0.00804624],
         [-0.00068141, -0.00173595, -0.09998261],
         [-0.00131024,  0.00996927, -0.09949321],
         [ 0.0267848 ,  0.08624034,  0.04295553],
         [ 0.09325451,  0.03448763,  0.01068643],
         [-0.00076673, -0.03810812,  0.09245098],
         [ 0.0905717 ,  0.0389212 , -0.01679011],
         [ 0.03668759,  0.04756385, -0.07994811],
         [-0.05510925, -0.06818782,  0.04809773],
         [-0.0985135 , -0.01708244,  0.00181171],
         [-0.09599535, -0.02618252, -0.00996844],
         [ 0.03794768,  0.04684026, -0.07978699],
         [-0.09158274, -0.03934284,  0.00804624],
         [ 0.03837689,  0.05307983, -0.07556286],
         [ 0.0532635 ,  0.05853241, -0.06113066],
         [ 0.09645236,  0.02610221, -0.0039518 ],
         [-0.00068141, -0.00173595, -0.09998261],
         [ 0.03461944,  0.04500624, -0.08231606],
         [ 0.09809889,  0.01767052, -0.00802265],
         [-0.09952088, -0.00925621,  0.00314901],
         [ 0.09662798,  0.02562013,  0.00257709],
         [-0.00571823,  0.07624518, -0.06445134],
         [ 0.03794768,  0.04684026, -0.07978699],
         [-0.0985135 , -0.01708244,  0.00181171],
         [ 0.06651156,  0.03567263,  0.06560241],
         [ 0.03668759,  0.04756385, -0.07994811],
         [-0.086275  , -0.04314457, -0.02636611],
         [-0.09891146, -0.00410059, -0.01413179],
         [ 0.09809889,  0.01767052, -0.00802265],
         [-0.06836873, -0.05454612,  0.04848133],
         [-0.09158274, -0.03934284,  0.00804624],
         [ 0.00766755, -0.03127789,  0.09467261],
         [-0.024793  , -0.03732246,  0.0893999 ],
         [ 0.09325451,  0.03448763,  0.01068643],
         [ 0.09809889,  0.01767052, -0.00802265],
         [ 0.09240277,  0.03575584,  0.01353691],
         [ 0.0847299 ,  0.04721596, -0.02432069],
         [-0.00412936, -0.06518913,  0.07571874],
         [ 0.09774838,  0.01473572, -0.01510343],
         [-0.00199138, -0.07553987,  0.06549628],
         [ 0.05281614,  0.04211972, -0.07373185],
         [ 0.0182096 , -0.05103199,  0.08404849],
         [-0.01905992,  0.01199028,  0.09743179],
         [-0.09957636, -0.00199163, -0.00897675],
         [-0.04858686, -0.05732126,  0.06598175],
         [ 0.03461944,  0.04500624, -0.08231606],
         [-0.024793  , -0.03732246,  0.0893999 ],
         [-0.0958046 , -0.02772977,  0.00724841],
         [-0.09094213, -0.04124467, -0.00532976],
         [-0.06911296, -0.03535839,  0.06303319],
         [-0.09599535, -0.02618252, -0.00996844],
         [ 0.01633009, -0.00098766,  0.09865269],
         [-0.08183806, -0.05744461,  0.00162815],
         [ 0.00383077,  0.02606627,  0.09646696],
         [ 0.00013262,  0.00276036, -0.0999618 ],
         [-0.07643489, -0.06415489,  0.00646967],
         [ 0.09809889,  0.01767052, -0.00802265],
         [ 0.09774838,  0.01473572, -0.01510343],
         [-0.00687745,  0.01041337,  0.09921826],
         [ 0.01184077, -0.07599393,  0.06391181],
         [ 0.08837522,  0.0382599 ,  0.0269444 ],
         [ 0.09067754,  0.04026717,  0.01249564],
         [-0.0985135 , -0.01708244,  0.00181171],
         [ 0.05995323,  0.05058298,  0.06202397],
         [-0.024793  , -0.03732246,  0.0893999 ],
         [-0.05510925, -0.06818782,  0.04809773],
         [-0.09493186,  0.00691243,  0.03066202],
         [ 0.09067754,  0.04026717,  0.01249564],
         [ 0.09645236,  0.02610221, -0.0039518 ],
         [-0.08367918, -0.05021676, -0.02181912],
         [ 0.02829159,  0.05525315, -0.07840073],
         [ 0.09662798,  0.02562013,  0.00257709],
         [ 0.09581882,  0.02209819,  0.01817758],
         [ 0.0532635 ,  0.05853241, -0.06113066],
         [-0.00571823,  0.07624518, -0.06445134],
         [-0.011456  ,  0.07804976, -0.06145726],
         [-0.07643489, -0.06415489,  0.00646967],
         [ 0.09581882,  0.02209819,  0.01817758],
         [ 0.00947653, -0.01303414,  0.09869299],
         [ 0.09664764,  0.02528298, -0.00447273],
         [ 0.0267848 ,  0.08624034,  0.04295553],
         [-0.00199138, -0.07553987,  0.06549628],
         [-0.09756162,  0.00479005,  0.0214193 ],
         [ 0.01356486,  0.08434992, -0.05197196],
         [-0.08248688, -0.05459658,  0.01466723],
         [ 0.03837689,  0.05307983, -0.07556286],
         [ 0.03352283,  0.08282218, -0.04490776],
         [-0.05510925, -0.06818782,  0.04809773],
         [ 0.0905717 ,  0.0389212 , -0.01679011],
         [ 0.09581535,  0.02603906, -0.01189068],
         [ 0.0182096 , -0.05103199,  0.08404849],
         [-0.00300858,  0.06583025, -0.07521521],
         [ 0.09809889,  0.01767052, -0.00802265],
         [-0.09094213, -0.04124467, -0.00532976],
         [-0.011456  ,  0.07804976, -0.06145726],
         [ 0.00218926, -0.05291763,  0.08482294],
         [ 0.03352283,  0.08282218, -0.04490776]])
# ---
# name: test_read_oxdna.18
  array([[-1.02736698e-02,  5.95581643e-02,  4.18323511e-03],
         [ 2.03708257e-03,  1.53092518e-02,  6.46142587e-02],
         [ 2.15486325e-02,  1.88891776e-02,  6.34454843e-03],
         [ 5.54527827e-02, -3.04026194e-02, -2.07986832e-02],
         [-1.04749743e-02,  2.07955875e-02,  1.10502047e-02],
         [ 2.12986208e-02,  3.39831412e-02,  8.27708282e-03],
         [-1.97673906e-02,  1.25370566e-02,  3.43521237e-02],
         [ 8.21436942e-03,  4.73390613e-03, -4.03052717e-02],
         [ 1.90680061e-04,  2.77096983e-02,  3.55032608e-02],
         [-1.51787158e-02,  2.08009705e-02,  2.69191973e-02],
         [-1.55835245e-02, -5.07241674e-03,  1.22612547e-02],
         [ 2.43692864e-02, -2.80258320e-02,  3.29268165e-04],
         [-1.28489900e-02,  8.61848984e-03,  2.83835717e-02],
         [-5.40614827e-04,  3.99122648e-02, -1.42047424e-02],
         [ 8.35502334e-03, -1.51462723e-02, -2.67405752e-02],
         [ 5.54527827e-02, -3.04026194e-02, -2.07986832e-02],
         [ 1.00115221e-02,  1.12626851e-02, -1.50111569e-02],
         [ 2.15486325e-02,  1.88891776e-02,  6.34454843e-03],
         [ 1.35836331e-02,  2.97093447e-02, -3.05903107e-02],
         [-1.04749743e-02,  2.07955875e-02,  1.10502047e-02],
         [-1.48933176e-02,  3.71129662e-02,  1.00544188e-02],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [ 2.23488621e-02,  1.52635649e-02,  1.35052176e-02],
         [-4.71537234e-03, -9.12741385e-03, -3.00275628e-02],
         [ 2.93146912e-02,  9.33725387e-04,  1.73104536e-02],
         [ 8.35502334e-03, -1.51462723e-02, -2.67405752e-02],
         [-1.28489900e-02,  8.61848984e-03,  2.83835717e-02],
         [ 3.76942270e-02,  2.85983123e-02, -1.41764823e-02],
         [-1.55835245e-02, -5.07241674e-03,  1.22612547e-02],
         [-1.78090273e-03, -3.20384055e-02,  3.81988916e-03],
         [ 2.93965843e-02,  5.58058638e-03,  1.32663478e-03],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [-3.21873985e-02,  3.32693905e-02, -1.99413709e-02],
         [ 5.54527827e-02, -3.04026194e-02, -2.07986832e-02],
         [ 2.96454830e-03,  2.63261013e-02,  2.30899919e-02],
         [-1.16359964e-02,  3.25819803e-03,  1.86448428e-03],
         [ 8.21436942e-03,  4.73390613e-03, -4.03052717e-02],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [-2.40817554e-02, -2.87079569e-02, -1.21059883e-02],
         [-1.71004795e-02,  4.29058773e-03, -7.76027814e-02],
         [ 3.77871394e-02,  2.67810859e-02,  1.05468713e-01],
         [-4.76231463e-02,  6.62693530e-02, -1.70812625e-02],
         [-2.79970430e-02, -6.68711215e-02,  1.91949995e-03],
         [-4.91792755e-03,  1.76020190e-02,  4.44058824e-05],
         [ 1.34640858e-02, -1.67798810e-02, -1.75090469e-02],
         [ 9.52331629e-03,  1.65593699e-02,  1.25817358e-02],
         [ 9.86480154e-03,  2.36987881e-02,  1.68126915e-02],
         [-7.66402250e-03,  4.00850065e-02,  4.96864668e-04],
         [-1.48933176e-02,  3.71129662e-02,  1.00544188e-02],
         [-1.16359964e-02,  3.25819803e-03,  1.86448428e-03],
         [-3.11270989e-02, -7.34514371e-03, -1.98845286e-02],
         [-5.58882542e-02,  4.78079841e-02,  4.74830605e-02],
         [ 2.03708257e-03,  1.53092518e-02,  6.46142587e-02],
         [-5.40614827e-04,  3.99122648e-02, -1.42047424e-02],
         [-1.94358674e-03, -9.57510551e-04, -1.02756666e-02],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [-3.59068923e-02, -3.06898262e-03,  5.79364691e-03],
         [-2.49420002e-04, -2.24950369e-02,  3.50358672e-02],
         [ 4.56806365e-03, -1.71127878e-02,  1.30187673e-02],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [-4.76231463e-02,  6.62693530e-02, -1.70812625e-02],
         [ 1.83791760e-02, -8.56920145e-03, -5.39569445e-02],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [-4.42992263e-02, -3.53087261e-02, -5.41064031e-02],
         [ 6.15925714e-02,  4.20465274e-03,  2.36557387e-02],
         [-1.28489900e-02,  8.61848984e-03,  2.83835717e-02],
         [ 1.55176101e-02, -6.96514547e-03,  2.84047723e-02],
         [-1.16359964e-02,  3.25819803e-03,  1.86448428e-03],
         [ 2.43692864e-02, -2.80258320e-02,  3.29268165e-04],
         [-3.30214645e-03, -5.23898229e-02,  6.26956671e-03],
         [ 6.15925714e-02,  4.20465274e-03,  2.36557387e-02],
         [ 1.35836331e-02,  2.97093447e-02, -3.05903107e-02],
         [ 1.66292749e-02,  3.83103117e-02, -1.15611032e-03],
         [ 1.43041294e-02,  3.64823155e-02, -1.18541997e-02],
         [-4.71537234e-03, -9.12741385e-03, -3.00275628e-02],
         [ 4.10354603e-03, -1.55614521e-02, -4.50211577e-02],
         [ 2.15486325e-02,  1.88891776e-02,  6.34454843e-03],
         [ 2.93146912e-02,  9.33725387e-04,  1.73104536e-02],
         [ 7.87374214e-04,  2.67632492e-02,  2.70287506e-02],
         [ 4.56806365e-03, -1.71127878e-02,  1.30187673e-02],
         [ 4.10354603e-03, -1.55614521e-02, -4.50211577e-02],
         [ 2.02005524e-02, -5.17302528e-02,  1.78529620e-02],
         [ 4.95142154e-02, -2.70377640e-02, -2.02834625e-02],
         [-1.97673906e-02,  1.25370566e-02,  3.43521237e-02],
         [-2.79970430e-02, -6.68711215e-02,  1.91949995e-03],
         [-2.28466969e-02, -2.98092104e-02,  5.46392519e-03],
         [ 1.92018133e-02,  5.02648652e-02, -3.50408629e-02],
         [ 2.70305783e-03, -1.35646509e-02, -1.11006887e-03],
         [ 1.00115221e-02,  1.12626851e-02, -1.50111569e-02],
         [ 7.11918622e-03,  6.87272251e-02, -4.12370339e-02],
         [ 2.43692864e-02, -2.80258320e-02,  3.29268165e-04],
         [-1.51787158e-02,  2.08009705e-02,  2.69191973e-02],
         [-1.42376206e-03,  1.16824750e-02, -4.08512875e-02],
         [ 1.34640858e-02, -1.67798810e-02, -1.75090469e-02],
         [-1.02736698e-02,  5.95581643e-02,  4.18323511e-03],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [-5.58882542e-02,  4.78079841e-02,  4.74830605e-02],
         [ 7.87374214e-04,  2.67632492e-02,  2.70287506e-02],
         [ 1.89240032e-03,  9.01809707e-03,  3.46016586e-02],
         [ 7.11918622e-03,  6.87272251e-02, -4.12370339e-02]])
# ---
# name: test_read_oxdna.19
  array([[ 0.09317531, -0.09400848, -0.053209  ],
         [ 0.20108469,  0.03056156,  0.14014056],
         [ 0.45203865, -0.02823871, -0.16644804],
         [ 0.02485555, -0.60098082,  0.40357229],
         [ 0.01859499,  0.33780685,  0.24597408],
         [-0.71376854, -0.02346671,  0.02520627],
         [-0.33780149,  0.03586028,  0.52820295],
         [ 0.31833959,  0.0760544 ,  0.60982478],
         [ 0.24861656,  0.52534485,  0.44302326],
         [ 0.10086952, -0.21696413,  0.58978921],
         [-0.30899507,  0.54684848,  0.08392997],
         [ 0.26984692,  0.12731731, -0.09816995],
         [ 0.04275569,  0.04080066,  0.19007817],
         [-0.03050549, -0.34371924, -0.08790246],
         [-0.62691081,  0.12614498, -0.59744424],
         [ 0.02485555, -0.60098082,  0.40357229],
         [ 0.11092447,  0.5075714 , -0.03188594],
         [ 0.45203865, -0.02823871, -0.16644804],
         [ 0.47303724,  0.07717719,  0.06582385],
         [ 0.01859499,  0.33780685,  0.24597408],
         [ 0.12500277, -0.28220367,  0.02253948],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [ 0.21835415, -0.10439219,  0.40914813],
         [ 0.69490707, -0.14287785,  0.49931368],
         [-0.25180408, -0.01481993, -0.2577484 ],
         [-0.62691081,  0.12614498, -0.59744424],
         [ 0.04275569,  0.04080066,  0.19007817],
         [-0.24442717, -0.05512869, -0.24819355],
         [-0.30899507,  0.54684848,  0.08392997],
         [ 0.11221835,  0.12998766,  0.24576364],
         [ 0.26762274,  0.34717971,  0.51165205],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [-0.13101958, -0.12948103,  0.32969886],
         [ 0.02485555, -0.60098082,  0.40357229],
         [-0.01955763, -0.23441161,  0.05319884],
         [-0.19364452, -0.06779512,  0.00681733],
         [ 0.31833959,  0.0760544 ,  0.60982478],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [-0.27790996,  0.73970371,  0.07723859],
         [-0.21933019, -0.06439321, -0.46529678],
         [-0.04769472, -0.46898565,  0.51878339],
         [-0.5426141 ,  0.02065594,  0.050225  ],
         [ 0.66644132, -0.41882056,  0.38357246],
         [-0.60285157,  0.08059306, -0.10237537],
         [ 0.00702168,  0.25134701, -0.57352889],
         [ 0.0248131 ,  0.31462845,  0.00330124],
         [ 0.12875624,  0.23024842,  0.68575871],
         [ 0.11403539, -0.09229665, -0.16878569],
         [ 0.12500277, -0.28220367,  0.02253948],
         [-0.19364452, -0.06779512,  0.00681733],
         [-0.26143235, -0.38137051,  0.21757777],
         [-0.28695253, -0.1155934 , -0.09916895],
         [ 0.20108469,  0.03056156,  0.14014056],
         [-0.03050549, -0.34371924, -0.08790246],
         [-0.10487883,  0.005642  ,  0.19313969],
         [ 0.11562925,  0.36869135, -0.38319799],
         [-0.32221174, -0.32907715, -0.15583582],
         [ 0.21443294,  0.23247223,  0.32265642],
         [ 0.01323924,  0.46414214, -0.06828603],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [-0.5426141 ,  0.02065594,  0.050225  ],
         [ 0.25808203,  0.23306164,  0.15694402],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [ 0.02021866, -0.02517233,  0.7423116 ],
         [ 0.12423504,  0.77290797, -0.27071902],
         [ 0.04275569,  0.04080066,  0.19007817],
         [-0.29349983, -0.41782957, -0.34268132],
         [-0.19364452, -0.06779512,  0.00681733],
         [ 0.26984692,  0.12731731, -0.09816995],
         [ 0.25192297, -0.0341149 , -0.34709454],
         [ 0.12423504,  0.77290797, -0.27071902],
         [ 0.47303724,  0.07717719,  0.06582385],
         [ 0.04795134,  0.22494958,  0.3590683 ],
         [ 0.22297968, -0.34293345,  0.46881557],
         [ 0.69490707, -0.14287785,  0.49931368],
         [ 0.11430109, -0.53400034,  0.17983054],
         [ 0.45203865, -0.02823871, -0.16644804],
         [-0.25180408, -0.01481993, -0.2577484 ],
         [-0.3200866 ,  0.5997901 ,  0.49923322],
         [ 0.01323924,  0.46414214, -0.06828603],
         [ 0.11430109, -0.53400034,  0.17983054],
         [ 0.36395979,  0.30081421, -0.35809773],
         [ 0.2145942 , -0.16304515,  0.03998533],
         [-0.33780149,  0.03586028,  0.52820295],
         [ 0.66644132, -0.41882056,  0.38357246],
         [-0.18307629, -0.39750469,  0.09132914],
         [-0.07695127, -0.45136139, -0.00394719],
         [ 0.27902073, -0.41498572,  0.1874011 ],
         [ 0.11092447,  0.5075714 , -0.03188594],
         [ 0.32382834, -0.17225422,  0.04609509],
         [ 0.26984692,  0.12731731, -0.09816995],
         [ 0.10086952, -0.21696413,  0.58978921],
         [-0.09816943,  0.46905476,  0.36684167],
         [ 0.00702168,  0.25134701, -0.57352889],
         [ 0.09317531, -0.09400848, -0.053209  ],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [-0.28695253, -0.1155934 , -0.09916895],
         [-0.3200866 ,  0.5997901 ,  0.49923322],
         [-0.05890995,  0.37820974,  0.30477676],
         [ 0.32382834, -0.17225422,  0.04609509]])
# ---
# name: test_read_oxdna.2
  array([[0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.54901963, 0.8392157 , 0.00392157],
         [0.8392157 , 0.35686275, 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.74117649, 0.8392157 , 0.35686275, 0.00392157],
         [0.35686275, 0.8392157 , 0.54901963, 0.00392157]])
# ---
# name: test_read_oxdna.20
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_read_oxdna.21
  array([[1985, 1986],
         [1386, 1387],
         [2062, 2066],
         [ 189,  195],
         [1142, 1146],
         [1902, 1903],
         [ 507,  508],
         [  24,   25],
         [   6,   12],
         [ 374,  380],
         [1630, 1631],
         [1422, 1423],
         [1102, 1106],
         [1895, 1892],
         [1825, 1826],
         [ 836,  840],
         [ 692,  693],
         [1922, 1923],
         [  34,   40],
         [ 552,  553],
         [1154, 1155],
         [2008, 2009],
         [ 373,  374],
         [1813, 1814],
         [ 951,  948],
         [1288, 1289],
         [1292, 1293],
         [1681, 1682],
         [ 133,  134],
         [ 352,  353],
         [1359, 1356],
         [1331, 1328],
         [1729, 1730],
         [2017, 2018],
         [1809, 1810],
         [ 523,  524],
         [1631, 1628],
         [2014, 2015],
         [1486, 1487],
         [1692, 1693],
         [ 244,  250],
         [2126, 2127],
         [ 979,  976],
         [ 734,  738],
         [ 245,  251],
         [ 807,  811],
         [2005, 2006],
         [ 939,  936],
         [2016, 2017],
         [ 461,  456],
         [1035, 1032],
         [ 132,  133],
         [1882, 1883],
         [ 369,  370],
         [1734, 1735],
         [1552, 1553],
         [1994, 1995],
         [ 612,  616],
         [ 147,  148],
         [  61,   62],
         [1426, 1427],
         [ 384,  385],
         [2079, 2083],
         [1608, 1609],
         [ 804,  805],
         [1149, 1150],
         [2094, 2095],
         [ 355,  356],
         [1224, 1225],
         [1390, 1394],
         [1580, 1581],
         [1726, 1727],
         [2019, 2016],
         [1195, 1192],
         [  71,   77],
         [1550, 1551],
         [ 804,  808],
         [ 485,  491],
         [1460, 1464],
         [ 992,  993],
         [ 650,  651],
         [ 795,  792],
         [1429, 1430],
         [ 237,  238],
         [ 161,  167],
         [1184, 1185],
         [1671, 1675],
         [1255, 1252],
         [ 377,  372],
         [ 226,  227],
         [1479, 1483],
         [ 533,  528],
         [ 671,  675],
         [1781, 1785],
         [ 365,  360],
         [ 855,  859],
         [1141, 1142],
         [ 564,  570],
         [ 373,  379],
         [1450, 1451]])
# ---
# name: test_read_oxdna.22
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_read_oxdna.23
  array([ True,  True,  True, False,  True,  True, False, False, False,
         False,  True,  True,  True,  True,  True,  True,  True,  True,
         False, False,  True,  True, False,  True,  True,  True,  True,
          True, False, False,  True,  True,  True,  True,  True, False,
          True,  True,  True, False,  True,  True,  True, False,  True,
          True,  True, False,  True,  True, False,  True,  True,  True,
          True, False, False,  True, False,  True,  True,  True,  True,
          True, False,  True,  True,  True,  True,  True,  True, False,
          True,  True, False,  True,  True,  True,  True,  True, False,
         False,  True,  True,  True, False, False,  True, False,  True,
          True, False,  True,  True, False, False,  True, False,  True,
          True])
# ---
# name: test_read_oxdna.3
  array([[-0.1847762 ,  0.48056674,  0.61946911],
         [-0.06667626,  0.25977832,  0.02073412],
         [-0.11924929,  0.56081957,  0.01095601],
         [-0.5727089 ,  0.18338861,  0.14372367],
         [-0.12447289,  0.4184472 ,  0.41227993],
         [-0.29941159,  0.34526375,  0.6121313 ],
         [ 0.18016523,  0.34712958,  0.05691314],
         [-0.19671723,  0.61184704, -0.07283156],
         [-0.04547399,  0.61685956, -0.07420328],
         [-0.20736422,  0.27845809,  0.14896014],
         [-0.27221677,  0.4985545 ,  0.51372129],
         [-0.49450597,  0.14574118,  0.0575412 ],
         [-0.05350305,  0.5666253 ,  0.05521018],
         [-0.2025847 ,  0.27303702, -0.05768033],
         [-0.13921508,  0.80432522, -0.33456364],
         [-0.28593853,  0.34475106,  0.33444649],
         [-0.2254868 ,  0.30867434,  0.37775645],
         [ 0.01170577,  0.41593501, -0.048958  ],
         [-0.15093568,  0.32261238, -0.07720789],
         [-0.14472729,  0.36867908,  0.46569172],
         [-0.55513269,  0.13572729,  0.09985477],
         [-0.01086663,  0.35358992, -0.06487959],
         [-0.06882509,  0.82816535, -0.30626628],
         [-0.26999378,  0.58487177,  0.16423543],
         [-0.01164352,  0.35392565, -0.0448975 ],
         [-0.04869071,  0.64156187,  0.08386919],
         [-0.13747424,  0.77996325, -0.21149386],
         [-0.55894321,  0.24128413, -0.04888721],
         [-0.07511915,  0.96370262, -0.17145228],
         [-0.10599135,  0.39115813,  0.52539837],
         [-0.19654143,  0.27872267, -0.03948274],
         [-0.42006496,  0.27594611, -0.03491949],
         [-0.02181878,  0.42751995, -0.03046765],
         [-0.09791925,  0.41262344,  0.3324877 ],
         [-0.19620679,  0.2044155 ,  0.01101823],
         [-0.04122167,  0.66008085,  0.08274592],
         [-0.08252058,  0.55272073,  0.06804163],
         [-0.17391741,  0.253916  , -0.06122632],
         [-0.18180721,  0.56759715,  0.24213012],
         [-0.1021301 ,  0.57092786,  0.17920811],
         [-0.20036221,  0.51136863,  0.48925802],
         [-0.18356183,  0.30423188,  0.45182285],
         [-0.52829981,  0.29671568, -0.0162821 ],
         [-0.06033402,  0.89157218, -0.29717448],
         [-0.33135903,  0.36492753, -0.00254828],
         [-0.10714621,  0.65944523,  0.11619705],
         [ 0.13622396,  0.45015404,  0.16637625],
         [-0.02682115,  0.35911182, -0.07560163],
         [-0.06397243,  0.56812251,  0.19087522],
         [-0.28851315,  0.4953537 ,  0.30231789],
         [-0.19127269,  0.26063368, -0.06855212],
         [ 0.09597747,  0.45686316,  0.11126433],
         [-0.52516562,  0.14029452,  0.1259529 ],
         [-0.26467341,  0.34636909,  0.12608106],
         [-0.17918615,  0.27200499, -0.03215694],
         [-0.10406395,  0.64896667, -0.14061044],
         [-0.10409714,  0.55831206, -0.00185511],
         [-0.41680264,  0.30646312,  0.13352662],
         [ 0.23178379,  0.35829431,  0.01004873],
         [-0.27472815,  0.20740122,  0.05320759],
         [-0.28399163,  0.43681639,  0.54735982],
         [-0.13156459,  0.31310859, -0.05010734],
         [-0.00899569,  0.42740759,  0.12348936],
         [-0.29371953,  0.45128825,  0.55715436],
         [-0.24968979,  0.51679301,  0.17014097],
         [-0.30427173,  0.40332252,  0.07409611],
         [-0.06288069,  0.61479837, -0.06457216],
         [-0.09642082,  0.677692  , -0.12282167],
         [-0.12370023,  0.78869253, -0.15047646],
         [-0.44977668,  0.29130906, -0.04393027],
         [ 0.2010297 ,  0.41075173,  0.17344423],
         [-0.11497326,  0.37778792,  0.53725427],
         [-0.20131814,  0.35679814,  0.24320439],
         [-0.15701163,  0.40026477, -0.02429943],
         [-0.06555124,  0.84025043, -0.32186219],
         [-0.10115859,  0.83587599, -0.16248445],
         [-0.01767913,  0.43427923, -0.04882998],
         [-0.08119759,  0.58661264,  0.0609997 ],
         [-0.33119693,  0.28714439,  0.12904051],
         [ 0.12786351,  0.42095199,  0.14035045],
         [-0.17408177,  0.85946816, -0.21611974],
         [-0.06229357,  0.58458501,  0.05479271],
         [-0.11736649,  0.4172492 ,  0.3331258 ],
         [-0.0746768 ,  0.85671598, -0.04868589],
         [-0.36386889,  0.3862446 ,  0.00686924],
         [-0.11643794,  0.34871277,  0.466721  ],
         [-0.10005293,  0.95516539, -0.26872125],
         [-0.16790761,  0.32579303,  0.42198893],
         [-0.23134863,  0.5369733 ,  0.29927656],
         [-0.06361656,  0.55069309,  0.06183464],
         [-0.15388545,  0.80427891, -0.17159328],
         [-0.16368334,  0.79094446, -0.35511258],
         [-0.14664888,  0.31757692, -0.03775832],
         [-0.29131305,  0.48394582,  0.26972923],
         [-0.11805426,  0.44584525,  0.39207724],
         [-0.59470254,  0.14997779,  0.14372367],
         [-0.28538704,  0.23631787,  0.11836603],
         [-0.5344578 ,  0.34116203,  0.05608812],
         [ 0.13677409,  0.33318654,  0.10098837],
         [-0.11389031,  0.69289428,  0.1102239 ]])
# ---
# name: test_read_oxdna.4
  array([[-6.71379194e-02, -7.40019232e-02, -4.02680831e-03],
         [-1.81863382e-02,  9.81349796e-02, -6.22782717e-03],
         [-1.36492327e-02,  7.54409581e-02,  6.42056167e-02],
         [-1.34190923e-04,  2.04943726e-03, -9.99789089e-02],
         [-8.98629501e-02, -3.46900150e-02, -2.68561486e-02],
         [ 6.23006113e-02,  7.82013834e-02, -1.78236980e-03],
         [-4.54441719e-02,  7.94697851e-02,  4.02415022e-02],
         [ 7.67698064e-02,  2.36722380e-02,  5.95484972e-02],
         [-7.81961530e-02,  6.23213723e-02,  1.18741265e-03],
         [ 6.50486071e-03, -1.46040376e-02, -9.87137631e-02],
         [ 6.24891892e-02, -7.71166161e-02, -1.21707590e-02],
         [-2.54431330e-02,  9.19696838e-02, -2.99035907e-02],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [ 5.91577869e-03,  9.98224467e-02,  6.94268965e-04],
         [ 9.12884623e-02,  3.49971727e-02,  2.10146662e-02],
         [ 5.69041856e-02,  7.93420821e-02,  2.16043182e-02],
         [ 1.20112877e-02, -2.31050458e-02,  9.65499133e-02],
         [-5.00132795e-03, -3.26736234e-02,  9.43791419e-02],
         [-7.70833045e-02,  6.22820742e-02,  1.33832190e-02],
         [-1.58398002e-02,  4.52440865e-02, -8.77614543e-02],
         [-4.20796825e-03,  3.49430889e-02,  9.36016738e-02],
         [-5.32451086e-02,  7.66618401e-02,  3.58875953e-02],
         [ 9.62370262e-02, -6.62590098e-03, -2.63539404e-02],
         [-4.20796825e-03,  3.49430889e-02,  9.36016738e-02],
         [-6.44068196e-02, -3.67151126e-02, -6.71100765e-02],
         [ 4.06344533e-02,  3.03135701e-02, -8.61970335e-02],
         [ 2.90077087e-02, -6.13364279e-02,  7.34601691e-02],
         [ 4.70633991e-02, -8.82324502e-02,  2.62537564e-04],
         [-9.44243595e-02,  3.25364098e-02, -5.04198344e-03],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [ 1.45386234e-02,  9.46419220e-03,  9.84837860e-02],
         [ 1.20112877e-02, -2.31050458e-02,  9.65499133e-02],
         [-9.80471820e-02,  1.58813056e-02, -1.15989819e-02],
         [-2.28731930e-02,  7.36130476e-02,  6.37019351e-02],
         [-6.44068196e-02, -3.67151126e-02, -6.71100765e-02],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [-2.97466870e-02, -8.39892477e-02, -4.53975908e-02],
         [-9.76733565e-02, -1.92365609e-02, -9.47999395e-03],
         [ 2.61396728e-02, -9.63984281e-02, -4.90521034e-03],
         [-7.68944900e-03,  9.87471193e-02,  1.37796309e-02],
         [ 2.36629061e-02, -9.16634798e-02,  3.22160535e-02],
         [-6.73444569e-02,  2.34051188e-03,  7.38867223e-02],
         [ 2.04689093e-02, -7.61707723e-02,  6.14738651e-02],
         [-1.55369043e-02, -6.42391890e-02, -7.50461966e-02],
         [ 4.15099040e-02, -3.75111625e-02, -8.28844979e-02],
         [-4.20796825e-03,  3.49430889e-02,  9.36016738e-02],
         [-9.76733565e-02, -1.92365609e-02, -9.47999395e-03],
         [ 7.86166638e-02, -6.12482205e-02, -8.25086515e-03],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [ 3.57444063e-02, -8.40110481e-02, -4.07980457e-02],
         [-1.58398002e-02,  4.52440865e-02, -8.77614543e-02],
         [ 2.90623568e-02, -6.01412281e-02, -7.44205043e-02],
         [-8.19615088e-03,  1.44714173e-02,  9.86073092e-02],
         [-2.55446276e-03,  8.67350101e-02,  4.97042611e-02],
         [-1.36492327e-02,  7.54409581e-02,  6.42056167e-02],
         [-3.88864419e-06, -3.21701355e-02, -9.46841240e-02],
         [-3.86054926e-02,  5.35684712e-02,  7.51001611e-02],
         [-1.80382114e-02,  9.83568206e-02,  7.48428807e-04],
         [ 9.32236761e-02, -3.50077525e-02, -9.15448926e-03],
         [-5.00132795e-03, -3.26736234e-02,  9.43791419e-02],
         [ 9.19466279e-03, -2.24431995e-02, -9.70142335e-02],
         [ 9.32236761e-02, -3.50077525e-02, -9.15448926e-03],
         [ 9.26795453e-02,  2.80560013e-02,  2.49672346e-02],
         [ 2.23880652e-02, -9.74605307e-02,  4.67783160e-04],
         [-7.81961530e-02,  6.23213723e-02,  1.18741265e-03],
         [-2.55446276e-03,  8.67350101e-02,  4.97042611e-02],
         [ 9.18333083e-02, -4.79413569e-03,  3.92894149e-02],
         [ 1.45386234e-02,  9.46419220e-03,  9.84837860e-02],
         [ 9.95471794e-03,  8.35173763e-03, -9.91521701e-02],
         [-9.44243595e-02,  3.25364098e-02, -5.04198344e-03],
         [-1.94842722e-02,  9.48762298e-02,  2.48769578e-02],
         [ 2.72955541e-02, -8.36349726e-02,  4.75409813e-02],
         [-5.32451086e-02,  7.66618401e-02,  3.58875953e-02],
         [ 6.26407415e-02, -7.78976530e-02, -2.84509058e-03],
         [ 1.20112877e-02, -2.31050458e-02,  9.65499133e-02],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [-1.94408335e-02,  2.64373478e-02, -9.44622755e-02],
         [ 4.15099040e-02, -3.75111625e-02, -8.28844979e-02],
         [ 5.32546453e-02,  8.10216516e-02,  2.44834125e-02],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [-9.80471820e-02,  1.58813056e-02, -1.15989819e-02],
         [-3.59954014e-02, -5.87886162e-02, -7.24446848e-02],
         [ 2.04689093e-02, -7.61707723e-02,  6.14738651e-02],
         [-7.70833045e-02,  6.22820742e-02,  1.33832190e-02],
         [-1.77254844e-02, -6.71797395e-02,  7.19214156e-02],
         [-7.68944900e-03,  9.87471193e-02,  1.37796309e-02],
         [ 2.98840553e-02, -9.04244930e-02, -3.05017177e-02],
         [-7.66800940e-02,  3.38953361e-02,  5.45093529e-02],
         [ 9.18333083e-02, -4.79413569e-03,  3.92894149e-02],
         [ 5.91577869e-03,  9.98224467e-02,  6.94268965e-04],
         [-5.00132795e-03, -3.26736234e-02,  9.43791419e-02],
         [ 7.86166638e-02, -6.12482205e-02, -8.25086515e-03],
         [-8.98629501e-02, -3.46900150e-02, -2.68561486e-02],
         [-1.34190923e-04,  2.04943726e-03, -9.99789089e-02],
         [-1.25411525e-02,  8.11201558e-02, -5.71160130e-02],
         [ 2.79761050e-02, -9.14829150e-02, -2.91241352e-02],
         [-4.01557535e-02,  8.98928866e-02, -1.75152514e-02],
         [-1.55369043e-02, -6.42391890e-02, -7.50461966e-02]])
# ---
# name: test_read_oxdna.5
  array([[-0.01905992,  0.01199028,  0.09743179],
         [ 0.09809889,  0.01767052, -0.00802265],
         [-0.00412936, -0.06518913,  0.07571874],
         [ 0.08793889,  0.04760268,  0.00085776],
         [ 0.02420893,  0.011841  , -0.09630014],
         [-0.00068141, -0.00173595, -0.09998261],
         [-0.08248688, -0.05459658,  0.01466723],
         [-0.02431907, -0.07521226,  0.06125113],
         [ 0.03461944,  0.04500624, -0.08231606],
         [ 0.09662798,  0.02562013,  0.00257709],
         [ 0.0088834 ,  0.02251154, -0.09702739],
         [ 0.09664764,  0.02528298, -0.00447273],
         [ 0.01184077, -0.07599393,  0.06391181],
         [-0.08183806, -0.05744461,  0.00162815],
         [ 0.06615396, -0.00444113,  0.0748594 ],
         [-0.0048381 , -0.04184068,  0.09069704],
         [ 0.00766755, -0.03127789,  0.09467261],
         [ 0.08939558,  0.04481376, -0.00039702],
         [-0.08367918, -0.05021676, -0.02181912],
         [ 0.01633009, -0.00098766,  0.09865269],
         [ 0.09645236,  0.02610221, -0.0039518 ],
         [ 0.08736574,  0.04673785, -0.01352041],
         [ 0.06976308,  0.01573283,  0.06989699],
         [-0.011456  ,  0.07804976, -0.06145726],
         [ 0.08736574,  0.04673785, -0.01352041],
         [ 0.05281614,  0.04211972, -0.07373185],
         [ 0.0267848 ,  0.08624034,  0.04295553],
         [-0.09029086, -0.04298262, -0.00023509],
         [ 0.06651156,  0.03567263,  0.06560241],
         [ 0.00383077,  0.02606627,  0.09646696],
         [-0.08183806, -0.05744461,  0.00162815],
         [ 0.08749561,  0.045238  , -0.01726383],
         [ 0.08939558,  0.04481376, -0.00039702],
         [ 0.01329556,  0.01007108, -0.0985992 ],
         [-0.09030566, -0.04048231,  0.0143551 ],
         [ 0.05281614,  0.04211972, -0.07373185],
         [ 0.01184077, -0.07599393,  0.06391181],
         [-0.08183806, -0.05744461,  0.00162815],
         [-0.03075218, -0.03658691,  0.08783907],
         [ 0.00218926, -0.05291763,  0.08482294],
         [ 0.03372467,  0.01388288, -0.09311236],
         [ 0.00947653, -0.01303414,  0.09869299],
         [-0.09666996, -0.02553766, -0.00165688],
         [ 0.07212415,  0.02400014,  0.06497769],
         [ 0.09240277,  0.03575584,  0.01353691],
         [ 0.0532635 ,  0.05853241, -0.06113066],
         [ 0.08837522,  0.0382599 ,  0.0269444 ],
         [ 0.08736574,  0.04673785, -0.01352041],
         [ 0.00218926, -0.05291763,  0.08482294],
         [-0.02331235, -0.04175415,  0.0878244 ],
         [-0.08183806, -0.05744461,  0.00162815],
         [ 0.09325451,  0.03448763,  0.01068643],
         [ 0.09645236,  0.02610221, -0.0039518 ],
         [ 0.09497959,  0.00871392,  0.03004904],
         [-0.08183806, -0.05744461,  0.00162815],
         [ 0.03794768,  0.04684026, -0.07978699],
         [-0.00412936, -0.06518913,  0.07571874],
         [-0.09952088, -0.00925621,  0.00314901],
         [-0.07643489, -0.06415489,  0.00646967],
         [-0.09695569, -0.01790832,  0.01669992],
         [-0.00169288,  0.02105199, -0.0977443 ],
         [-0.08367918, -0.05021676, -0.02181912],
         [-0.09957636, -0.00199163, -0.00897675],
         [-0.00169288,  0.02105199, -0.0977443 ],
         [-0.00571823,  0.07624518, -0.06445134],
         [ 0.09581882,  0.02209819,  0.01817758],
         [ 0.03461944,  0.04500624, -0.08231606],
         [ 0.03794768,  0.04684026, -0.07978699],
         [ 0.03668759,  0.04756385, -0.07994811],
         [ 0.08749561,  0.045238  , -0.01726383],
         [ 0.09067754,  0.04026717,  0.01249564],
         [ 0.00383077,  0.02606627,  0.09646696],
         [ 0.0109084 ,  0.02730181, -0.09558042],
         [-0.086275  , -0.04314457, -0.02636611],
         [ 0.06976308,  0.01573283,  0.06989699],
         [ 0.05713013,  0.04836263, -0.06631143],
         [ 0.08939558,  0.04481376, -0.00039702],
         [ 0.01184077, -0.07599393,  0.06391181],
         [-0.09756162,  0.00479005,  0.0214193 ],
         [ 0.08837522,  0.0382599 ,  0.0269444 ],
         [ 0.084497  , -0.04921046, -0.02094258],
         [ 0.01184077, -0.07599393,  0.06391181],
         [ 0.01329556,  0.01007108, -0.0985992 ],
         [-0.06911296, -0.03535839,  0.06303319],
         [ 0.09240277,  0.03575584,  0.01353691],
         [ 0.01633009, -0.00098766,  0.09865269],
         [ 0.05995323,  0.05058298,  0.06202397],
         [ 0.00947653, -0.01303414,  0.09869299],
         [-0.01905729, -0.03697325,  0.09093843],
         [ 0.01184077, -0.07599393,  0.06391181],
         [ 0.03668759,  0.04756385, -0.07994811],
         [ 0.06615396, -0.00444113,  0.0748594 ],
         [-0.08367918, -0.05021676, -0.02181912],
         [-0.02331235, -0.04175415,  0.0878244 ],
         [ 0.02420893,  0.011841  , -0.09630014],
         [ 0.08793889,  0.04760268,  0.00085776],
         [-0.09493186,  0.00691243,  0.03066202],
         [-0.09599535, -0.02618252, -0.00996844],
         [-0.09158274, -0.03934284,  0.00804624],
         [ 0.0532635 ,  0.05853241, -0.06113066]])
# ---
# name: test_read_oxdna.6
  array([[ 9.52331629e-03,  1.65593699e-02,  1.25817358e-02],
         [ 1.38301952e-02,  4.20656316e-02,  2.59574652e-02],
         [ 3.77871394e-02,  2.67810859e-02,  1.05468713e-01],
         [ 1.75778288e-02, -1.12861395e-02,  5.33955963e-03],
         [ 3.27147022e-02, -4.97938283e-02,  1.55039933e-02],
         [-1.04749743e-02,  2.07955875e-02,  1.10502047e-02],
         [ 2.70305783e-03, -1.35646509e-02, -1.11006887e-03],
         [-1.04749808e-02, -6.80086091e-02,  4.51879390e-03],
         [-1.48933176e-02,  3.71129662e-02,  1.00544188e-02],
         [-4.71537234e-03, -9.12741385e-03, -3.00275628e-02],
         [ 5.27467914e-02,  2.61296686e-02, -1.10662421e-02],
         [ 4.95142154e-02, -2.70377640e-02, -2.02834625e-02],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [ 1.04887625e-02,  2.43584942e-02,  2.99419160e-03],
         [-5.54681057e-03, -7.82580487e-03,  2.16245535e-03],
         [ 2.96454830e-03,  2.63261013e-02,  2.30899919e-02],
         [-6.11905893e-03,  1.75805390e-02,  1.57301477e-03],
         [ 1.66292749e-02,  3.83103117e-02, -1.15611032e-03],
         [-1.94358674e-03, -9.57510551e-04, -1.02756666e-02],
         [ 1.35836331e-02,  2.97093447e-02, -3.05903107e-02],
         [ 5.45255020e-02,  2.66248789e-02, -1.61070132e-03],
         [ 4.84297909e-02, -5.30624948e-03, -1.52706280e-02],
         [ 7.87374214e-04,  2.67632492e-02,  2.70287506e-02],
         [ 5.45255020e-02,  2.66248789e-02, -1.61070132e-03],
         [-4.91792755e-03,  1.76020190e-02,  4.44058824e-05],
         [-1.97673906e-02,  1.25370566e-02,  3.43521237e-02],
         [ 5.16868010e-03, -2.52109654e-02, -9.81009845e-03],
         [ 3.76942270e-02,  2.85983123e-02, -1.41764823e-02],
         [-3.59068923e-02, -3.06898262e-03,  5.79364691e-03],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [ 5.94046339e-03,  1.90899186e-02,  4.21551354e-02],
         [-6.11905893e-03,  1.75805390e-02,  1.57301477e-03],
         [-2.20508333e-02, -1.85717158e-02,  6.85320050e-02],
         [ 7.21090734e-02, -2.97835264e-02, -1.74606554e-02],
         [-4.91792755e-03,  1.76020190e-02,  4.44058824e-05],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [-7.33056590e-02,  1.27047803e-02, -2.14536525e-02],
         [ 1.89240032e-03,  9.01809707e-03,  3.46016586e-02],
         [-5.69585827e-04,  3.89907463e-03, -1.69724599e-02],
         [ 2.02005524e-02, -5.17302528e-02,  1.78529620e-02],
         [ 3.02707814e-02,  1.91545002e-02, -2.05129429e-04],
         [ 1.67470649e-02,  5.69522963e-04,  6.37363046e-02],
         [-2.40817554e-02, -2.87079569e-02, -1.21059883e-02],
         [ 2.15486325e-02,  1.88891776e-02,  6.34454843e-03],
         [-4.42992263e-02, -3.53087261e-02, -5.41064031e-02],
         [ 5.45255020e-02,  2.66248789e-02, -1.61070132e-03],
         [ 1.89240032e-03,  9.01809707e-03,  3.46016586e-02],
         [-1.27380015e-02, -1.32760154e-02, -3.69411185e-02],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [ 8.21436942e-03,  4.73390613e-03, -4.03052717e-02],
         [ 1.35836331e-02,  2.97093447e-02, -3.05903107e-02],
         [-2.28689574e-02,  2.29518842e-02,  1.62084885e-02],
         [ 3.20829509e-04,  1.14343436e-02, -3.14686149e-02],
         [ 8.35502334e-03, -1.51462723e-02, -2.67405752e-02],
         [ 3.77871394e-02,  2.67810859e-02,  1.05468713e-01],
         [ 2.23488621e-02,  1.52635649e-02,  1.35052176e-02],
         [ 4.56806365e-03, -1.71127878e-02,  1.30187673e-02],
         [ 6.34121597e-02,  3.80921140e-02,  5.37731536e-02],
         [-3.85900363e-02, -9.36472137e-03, -3.13209593e-02],
         [ 1.66292749e-02,  3.83103117e-02, -1.15611032e-03],
         [ 9.86480154e-03,  2.36987881e-02,  1.68126915e-02],
         [-3.85900363e-02, -9.36472137e-03, -3.13209593e-02],
         [ 2.93146912e-02,  9.33725387e-04,  1.73104536e-02],
         [ 4.10354603e-03, -1.55614521e-02, -4.50211577e-02],
         [-1.48933176e-02,  3.71129662e-02,  1.00544188e-02],
         [ 8.35502334e-03, -1.51462723e-02, -2.67405752e-02],
         [-1.55835245e-02, -5.07241674e-03,  1.22612547e-02],
         [ 5.94046339e-03,  1.90899186e-02,  4.21551354e-02],
         [ 6.15925714e-02,  4.20465274e-03,  2.36557387e-02],
         [-3.59068923e-02, -3.06898262e-03,  5.79364691e-03],
         [ 1.67082194e-02, -3.59410495e-02, -1.78383328e-02],
         [-1.78090273e-03, -3.20384055e-02,  3.81988916e-03],
         [ 4.84297909e-02, -5.30624948e-03, -1.52706280e-02],
         [-1.49206501e-02,  3.40744182e-02,  4.00101319e-02],
         [-6.11905893e-03,  1.75805390e-02,  1.57301477e-03],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [-2.28466969e-02, -2.98092104e-02,  5.46392519e-03],
         [-4.42992263e-02, -3.53087261e-02, -5.41064031e-02],
         [-1.10223945e-02, -1.76031254e-02, -1.03435460e-02],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [-2.20508333e-02, -1.85717158e-02,  6.85320050e-02],
         [ 2.03708257e-03,  1.53092518e-02,  6.46142587e-02],
         [-2.40817554e-02, -2.87079569e-02, -1.21059883e-02],
         [-1.94358674e-03, -9.57510551e-04, -1.02756666e-02],
         [ 1.55176101e-02, -6.96514547e-03,  2.84047723e-02],
         [ 2.02005524e-02, -5.17302528e-02,  1.78529620e-02],
         [-2.06843875e-02,  1.07147107e-02,  4.39731702e-02],
         [ 3.14449705e-02,  2.45761313e-02,  1.65815465e-02],
         [-1.55835245e-02, -5.07241674e-03,  1.22612547e-02],
         [ 1.04887625e-02,  2.43584942e-02,  2.99419160e-03],
         [ 1.66292749e-02,  3.83103117e-02, -1.15611032e-03],
         [-1.27380015e-02, -1.32760154e-02, -3.69411185e-02],
         [ 3.27147022e-02, -4.97938283e-02,  1.55039933e-02],
         [ 1.75778288e-02, -1.12861395e-02,  5.33955963e-03],
         [-3.30214645e-03, -5.23898229e-02,  6.26956671e-03],
         [-5.40614827e-04,  3.99122648e-02, -1.42047424e-02],
         [ 5.54527827e-02, -3.04026194e-02, -2.07986832e-02],
         [ 2.15486325e-02,  1.88891776e-02,  6.34454843e-03]])
# ---
# name: test_read_oxdna.7
  array([[ 0.0248131 ,  0.31462845,  0.00330124],
         [-0.11431693,  0.0916965 ,  0.41521716],
         [-0.04769472, -0.46898565,  0.51878339],
         [-0.17198488,  0.07057842,  0.1954136 ],
         [-0.05128448,  0.09483435,  0.28431836],
         [ 0.01859499,  0.33780685,  0.24597408],
         [ 0.27902073, -0.41498572,  0.1874011 ],
         [-0.15132582,  0.37773696,  0.02775675],
         [ 0.12500277, -0.28220367,  0.02253948],
         [ 0.69490707, -0.14287785,  0.49931368],
         [-0.43553382, -0.1574173 , -1.07367063],
         [ 0.2145942 , -0.16304515,  0.03998533],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [ 0.11562925,  0.36869135, -0.38319799],
         [ 0.19300914, -0.3060599 ,  0.39992905],
         [-0.02481862, -0.01885154,  0.37617007],
         [-0.01955763, -0.23441161,  0.05319884],
         [ 0.1123574 ,  0.17527311,  0.16599359],
         [ 0.04795134,  0.22494958,  0.3590683 ],
         [-0.10487883,  0.005642  ,  0.19313969],
         [ 0.47303724,  0.07717719,  0.06582385],
         [ 0.17125499, -0.2004858 ,  0.36553469],
         [ 0.46429262, -0.3520436 , -0.22643994],
         [-0.3200866 ,  0.5997901 ,  0.49923322],
         [ 0.17125499, -0.2004858 ,  0.36553469],
         [-0.60285157,  0.08059306, -0.10237537],
         [-0.33780149,  0.03586028,  0.52820295],
         [ 0.28422552, -0.41143802,  0.37585014],
         [-0.24442717, -0.05512869, -0.24819355],
         [-0.32221174, -0.32907715, -0.15583582],
         [ 0.11562925,  0.36869135, -0.38319799],
         [ 0.07445318, -0.15962961, -0.0042668 ],
         [ 0.1123574 ,  0.17527311,  0.16599359],
         [ 0.32379779, -0.22089604, -0.1042638 ],
         [ 0.26861441, -0.14788161,  0.07764052],
         [-0.60285157,  0.08059306, -0.10237537],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [ 0.11562925,  0.36869135, -0.38319799],
         [ 0.06134497,  0.10438328,  0.45047748],
         [-0.05890995,  0.37820974,  0.30477676],
         [-0.45283559,  0.09858352, -0.06950573],
         [ 0.36395979,  0.30081421, -0.35809773],
         [ 0.2018449 ,  0.27267015, -0.03864359],
         [ 0.38878071, -0.345743  ,  0.03469429],
         [-0.27790996,  0.73970371,  0.07723859],
         [ 0.45203865, -0.02823871, -0.16644804],
         [ 0.02021866, -0.02517233,  0.7423116 ],
         [ 0.17125499, -0.2004858 ,  0.36553469],
         [-0.05890995,  0.37820974,  0.30477676],
         [ 0.00986674, -0.13932882, -0.69761831],
         [ 0.11562925,  0.36869135, -0.38319799],
         [ 0.31833959,  0.0760544 ,  0.60982478],
         [ 0.47303724,  0.07717719,  0.06582385],
         [-0.06346487, -0.0539242 ,  0.17452139],
         [ 0.11562925,  0.36869135, -0.38319799],
         [-0.62691081,  0.12614498, -0.59744424],
         [-0.04769472, -0.46898565,  0.51878339],
         [ 0.21835415, -0.10439219,  0.40914813],
         [ 0.01323924,  0.46414214, -0.06828603],
         [-0.42456326,  0.06487284,  0.04574971],
         [ 0.06001846, -0.35848504, -0.1251604 ],
         [ 0.04795134,  0.22494958,  0.3590683 ],
         [ 0.12875624,  0.23024842,  0.68575871],
         [ 0.06001846, -0.35848504, -0.1251604 ],
         [-0.25180408, -0.01481993, -0.2577484 ],
         [ 0.11430109, -0.53400034,  0.17983054],
         [ 0.12500277, -0.28220367,  0.02253948],
         [-0.62691081,  0.12614498, -0.59744424],
         [-0.30899507,  0.54684848,  0.08392997],
         [ 0.07445318, -0.15962961, -0.0042668 ],
         [ 0.12423504,  0.77290797, -0.27071902],
         [-0.32221174, -0.32907715, -0.15583582],
         [-0.8247537 ,  0.63702083, -0.16798158],
         [ 0.11221835,  0.12998766,  0.24576364],
         [ 0.46429262, -0.3520436 , -0.22643994],
         [-0.01738672,  0.11346112, -0.24401373],
         [ 0.1123574 ,  0.17527311,  0.16599359],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [-0.18307629, -0.39750469,  0.09132914],
         [ 0.02021866, -0.02517233,  0.7423116 ],
         [-0.06579916,  0.19024591,  0.23329009],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [ 0.32379779, -0.22089604, -0.1042638 ],
         [ 0.20108469,  0.03056156,  0.14014056],
         [-0.27790996,  0.73970371,  0.07723859],
         [-0.10487883,  0.005642  ,  0.19313969],
         [-0.29349983, -0.41782957, -0.34268132],
         [ 0.36395979,  0.30081421, -0.35809773],
         [-0.3392317 ,  0.01003996, -0.00928313],
         [ 0.10000167, -0.22691293,  0.040471  ],
         [-0.30899507,  0.54684848,  0.08392997],
         [ 0.19300914, -0.3060599 ,  0.39992905],
         [ 0.04795134,  0.22494958,  0.3590683 ],
         [ 0.00986674, -0.13932882, -0.69761831],
         [-0.05128448,  0.09483435,  0.28431836],
         [-0.17198488,  0.07057842,  0.1954136 ],
         [ 0.25192297, -0.0341149 , -0.34709454],
         [-0.03050549, -0.34371924, -0.08790246],
         [ 0.02485555, -0.60098082,  0.40357229],
         [ 0.45203865, -0.02823871, -0.16644804]])
# ---
# name: test_read_oxdna.8
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_read_oxdna.9
  array([[ 39,  40],
         [550, 556],
         [378, 384],
         [ 75,  81],
         [  0,   6],
         [247, 253],
         [495, 501],
         [326, 327],
         [352, 358],
         [ 14,  20],
         [331, 337],
         [473, 479],
         [153, 154],
         [409, 410],
         [538, 539],
         [540, 541],
         [ 66,  67],
         [143, 138],
         [569, 564],
         [426, 432],
         [ 54,  55],
         [431, 426],
         [365, 371],
         [ 64,  65],
         [303, 304],
         [401, 396],
         [260, 261],
         [558, 564],
         [151, 152],
         [374, 380],
         [ 73,  74],
         [ 58,  64],
         [159, 160],
         [300, 301],
         [568, 574],
         [144, 145],
         [490, 491],
         [467, 462],
         [ 98, 104],
         [302, 303],
         [249, 250],
         [442, 443],
         [351, 357],
         [293, 288],
         [118, 119],
         [ 57,  58],
         [460, 461],
         [511, 512],
         [155, 150],
         [113, 108],
         [271, 277],
         [447, 453],
         [149, 144],
         [339, 340],
         [532, 538],
         [204, 205],
         [151, 157],
         [177, 178],
         [505, 506],
         [ 25,  31],
         [134, 135],
         [160, 166],
         [ 79,  85],
         [329, 335],
         [578, 579],
         [369, 375],
         [329, 324],
         [334, 335],
         [516, 517],
         [359, 354],
         [350, 356],
         [138, 144],
         [467, 473],
         [ 35,  41],
         [233, 239],
         [428, 429],
         [376, 377],
         [ 70,  71],
         [510, 516],
         [250, 251],
         [ 56,  57],
         [570, 576],
         [457, 463],
         [340, 341],
         [ 30,  31],
         [494, 495],
         [435, 436],
         [501, 507],
         [339, 345],
         [399, 400],
         [ 49,  50],
         [141, 142],
         [432, 438],
         [511, 517],
         [580, 586],
         [196, 202],
         [ 97, 103],
         [537, 538],
         [126, 127],
         [262, 263]])
# ---
